# media_tag_system

./: CMakeLists.txt
src/: args.cpp  config.cpp  main.cpp  main.h  mpv_interface.cpp  thumbnail_jxl.cpp  thumbnail_loader.cpp
